cc: Ensure to reapply a shared canvas transform to image hijack canvas.

When we wrap a shared canvas in an image hijack canvas, it might already
have a transform applied to it. This transform is used to compute the
clip bounds for the canvas. However, since we're wrapping the canvas
into an image hijack canvas, its clip bounds can be different, since
it does not know about the transform on the raster canvas.

The fix to this is to ensure to apply the matrix to the hijack canvas
before attaching the raster canvas.

R=enne
BUG=601913
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review URL: https://codereview.chromium.org/1888613002

Cr-Commit-Position: refs/heads/master@{#387390}

Former-commit-id: 7cb1a3b0e0aec2fad7b3f59b789cff12efa3dd12